# bangrs

./: .gitignore  Cargo.toml  README.md
crates/bangrs-audio/: Cargo.toml
crates/bangrs-audio/src/: command.rs  engine.rs  error.rs  lib.rs  negotiate.rs  output.rs
crates/bangrs-audio/tests/: cpal_smoke.rs  negotiate.rs
crates/bangrs-core/: Cargo.toml
crates/bangrs-core/src/: error.rs  event.rs  lib.rs  library.rs  player.rs  view_model.rs
crates/bangrs-scan/: Cargo.toml
crates/bangrs-scan/src/: error.rs  lib.rs  scanner.rs
crates/bangrs-scan/tests/: fake_scanner.rs  fs_scanner.rs  fs_scanner_timing.rs
crates/bangrs-scan/tests/fixtures/: gen-fixtures.sh  sine-880-1s.flac
crates/bangrs-ui/: Cargo.toml
crates/bangrs-ui/src/: dispatcher.rs  handle.rs  handlers.rs  lib.rs  main.rs  pick_handler.rs  pick_state.rs  picker.rs  side_effects.rs
crates/bangrs-ui/tests/: pick_library.rs  wiring.rs
crates/bangrs-ui/ui/: main.slint
