[package]
name = "bangrs-scan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bangrs-core = { path = "../bangrs-core" }
thiserror = { workspace = true }
camino = { workspace = true }
walkdir = { workspace = true }
lofty = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
